--- a/crates/wasmparser/Cargo.toml
+++ b/crates/wasmparser/Cargo.toml
@@ -14,6 +14,7 @@ exclude = ["benches/*.wasm"]
 
 [dependencies]
 indexmap = { workspace = true }
+index_language = { path = "./src/validator/index_language" }
 
 [dev-dependencies]
 anyhow = { workspace = true }
